2001-06-29  James Cownie <jcownie@etnus.com>

	* dwarf2.h: Add DWARF 2.1 attribues.

2001-06-15  Per Bothner  <per@bothner.com>

	* dwarf2.h:  Partial merge with gcc version.
	(enum dwarf_descrim_list):  Fix typo -> dwarf_discrim_list.
	(DW_LANG_Java):  Use value from dwarf 2.1 draft (also used in gcc).

2001-05-15  Ralf Baechle  <ralf@gnu.org>

	* common.h: Remove definition of EM_MIPS_RS4_BE.  The constant was
	never in active use and is used otherwise by the ABI.

2001-05-07  Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>

	* external.h: Fix typo.
	* mips.h: Add/Extend many comments with reference to the MIPS ELF64
	spec v. 2.4, available at e.g.
	ftp://oss.sgi.com/pub/linux/mips/doc/ABI/ELF64.ps.
	(EF_MIPS_UCODE): Define.
	(EF_MIPS_OPTIONS_FIRST): Define.
	(EF_MIPS_ARCH_ASE): Define.
	(EF_MIPS_ARCH_ASE_MDMX): Define.
	(EF_MIPS_ARCH_ASE_M16): Define.
	(SHF_MIPS_ADDR): Renamed SHF_MIPS_ADDR32.
	(SHF_MIPS_STRING): Renamed SHF_MIPS_ADDR64.
	(SHF_MIPS_NODUPES): Define.
	(ELF64_MIPS_R_SSYM): New MIPS ELF 64 relocation info access macro.
	(ELF64_MIPS_R_TYPE3): Likewise.
	(ELF64_MIPS_R_TYPE2): Likewise.
	(ELF64_MIPS_R_TYPE): Likewise.
	(OHW_R10KLDL): Define.

2001-04-24  Todd Fries  <todd@fries.net>

	* sparc.h: Fix typo.

2001-04-20  Johan Rydberg  <jrydberg@opencores.org>

	* openrisc.h: New file.
	* common.h (EM_OPENRISC): New constant. 

2001-04-23  Bo Thorsen  <bo@suse.de>

	* x86-64.h: Add vtable support.

2001-03-23  Nick Clifton  <nickc@redhat.com>

	* mips.h: Remove extraneous whitespace.

2001-03-22  Hans-Peter Nilsson  <hp@axis.com>

	* cris.h: Add leading comment about PC-relative location.
	(R_CRIS_COPY, R_CRIS_GLOB_DAT, R_CRIS_JUMP_SLOT, R_CRIS_RELATIVE,
	R_CRIS_16_GOT, R_CRIS_32_GOT, R_CRIS_16_GOTPLT, R_CRIS_32_GOTPLT,
	R_CRIS_32_GOTREL, R_CRIS_32_PLT_GOTREL, R_CRIS_32_PLT_PCREL):
	New relocs.

2001-02-27  Philip Blundell  <pb@futuretv.com>

	* arm.h: Add new definitions from ARM document SWS ESPC 0003 B-01.
	(EF_PIC, et al.): Rename to EF_ARM_xx.
